# voice_activity_detector

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: CODEOWNERS  dependabot.yml  settings.yml
.github/workflows/: ci.yml  release.yml
examples/: segment.rs
src/: dynamic_vad.rs  error.rs  label.rs  lib.rs  predict.rs  sample.rs  vad.rs
src/iterator/: extension.rs  label.rs  mod.rs  predict.rs  segment.rs
src/stream/: extension.rs  label.rs  predict.rs  stream.rs
tests/: chunk_stream.rs  file_dynamic_vad.rs  file_label_iterator.rs  file_label_stream.rs  file_predict_iterator.rs  file_predict_stream.rs
