[package]
name = "voice_activity_detector"
version = "0.1.0"
edition = "2021"
authors = ["Nick Keenan <nkeenan38@gmail.com>"]
description = "Voice Activity Detector using the Silero VAD model."
license-file = "LICENSE"
repository = "https://github.com/nkeenan38/voice_activity_detector"
readme = "README.md"
keywords = ["speech", "recognition", "voice", "activity", "detection"]
categories = ["multimedia::audio"]
resolver = "2"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]

[dependencies]
futures = "0.3.30"
ndarray = "0.15.6"
ort = { version = "=2.0.0-rc.4" }
pin-project = "1.1.3"
thiserror = "1.0.59"
typed-builder = "0.18.2"

[dev-dependencies]
hound = "3.5.1"
itertools = "0.12.1"
tokio = { version = "1.37.0", features = ["test-util", "macros"] }
tokio-stream = { version = "0.1.14", features = ["full"] }

[features]
async = []
load-dynamic = ["ort/load-dynamic"]
