[package]
name = "voice_activity_detector"
version = "0.2.0"
edition = "2021"
authors = ["Nick Keenan <nkeenan38@gmail.com>"]
description = "Voice Activity Detector using the Silero VAD model."
license-file = "LICENSE"
repository = "https://github.com/nkeenan38/voice_activity_detector"
readme = "README.md"
keywords = ["speech", "recognition", "voice", "activity", "detection"]
categories = ["multimedia::audio"]
resolver = "2"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]

[dependencies]
futures = "0.3.31"
ndarray = "0.16.1"
ort = { version = "2.0.0-rc.9", features = ["ndarray"] }
pin-project = "1.1.10"
thiserror = "^2"
typed-builder = "0.20.1"

[dev-dependencies]
hound = "3.5.1"
itertools = "0.14.0"
tokio = { version = "1.44.1", features = ["test-util", "macros"] }
tokio-stream = { version = "0.1.17", features = ["full"] }

[features]
async = []
load-dynamic = ["ort/load-dynamic"]
